[package]
name = "creative-coding-showcase"
version = "0.1.0"
authors = ["Xarvalus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nannou = "0.13.1"
nannou = { git = "https://github.com/nannou-org/nannou" }
rand = "0.7.3"

